force-app/main/default/objects/System_Settings__mdt/fields/Additional_Filter__c.field-meta.xml
<CustomField>
    <fullName>Additional_Filter__c</fullName>
    <label>Additional Filter</label>
    <type>TextArea</type>
</CustomField>