force-app/main/default/objects/System_Settings__mdt/fields/Date_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Date_Field_API_Name__c</fullName>
    <label>Date Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>