force-app/main/default/objects/System_Settings__mdt/fields/Interface_Name__c.field-meta.xml
<CustomField>
    <fullName>Interface_Name__c</fullName>
    <label>Interface Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>