force-app/main/default/objects/System_Settings__mdt/fields/Is_Permanent_Delete__c.field-meta.xml
<CustomField>
    <fullName>Is_Permanent_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Permanent Delete</label>
    <type>Checkbox</type>
</CustomField>