force-app/main/default/objects/System_Settings__mdt/fields/is_Trigger__c.field-meta.xml
<CustomField>
    <fullName>is_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>is Trigger</label>
    <type>Checkbox</type>
</CustomField>