force-app/main/default/objects/System_Settings__mdt/fields/IsOutboundMessageRetry__c.field-meta.xml
<CustomField>
    <fullName>IsOutboundMessageRetry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsOutboundMessageRetry</label>
    <type>Checkbox</type>
</CustomField>