force-app/main/default/objects/System_Settings__mdt/fields/Log_Purge_Days__c.field-meta.xml
<CustomField>
    <fullName>Log_Purge_Days__c</fullName>
    <label>Log Purge (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>