force-app/main/default/objects/System_Settings__mdt/fields/Number_Of_Retry__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Retry__c</fullName>
    <label>Number Of Retry</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>