force-app/main/default/objects/System_Settings__mdt/fields/SObject_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_Api_Name__c</fullName>
    <label>SObject Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>