force-app/main/default/objects/System_Settings__mdt/fields/Warning__c.field-meta.xml
<CustomField>
    <fullName>Warning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Warning</label>
    <type>Checkbox</type>
</CustomField>